--- a/main.html
+++ b/main.html
@@ -6,6 +6,8 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
+	
+
 <body>
 	<!-- the entire body must be written by student -->
 	
@@ -13,6 +15,10 @@
 
     <script type="text/javascript" src="./script.js">
 </script>
+
+	<div id="text">
+		Welcome to the world of Web development
+	</div>
 
 </body>
 
